<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

        <TextView
        android:id="@+id/dialog_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/in_order_to" style="@style/text_view_style" />

        <LinearLayout
        android:id="@+id/button_holder"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/dialog_text"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2" >
            <LinearLayout
                android:id="@+id/positive_btn_holder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/positive_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@android:color/transparent"
                    style="@style/text_view_14clickstyle"
                    android:text="@string/i_understan" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/negative_btn_holder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/negative_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@android:color/transparent"
                    android:textColor="#A0A0A0"
                    style="@style/text_view_14clickstyle"
                    android:text="@string/turn_off_p2" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>